// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Text effects [CS-576] should allow {color} macro in formatters 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
            {
              "attrs": {
                "color": "#ff0000",
              },
              "type": "textColor",
            },
            {
              "type": "em",
            },
          ],
          "text": "Strong Red and Italic",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ADFEXP-38 bullet items should not contain code-block marks with others. 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "marks": [
                    {
                      "type": "strong",
                    },
                  ],
                  "text": "UNE FOIS QUE LE SERVICE ",
                  "type": "text",
                },
                {
                  "marks": [
                    {
                      "type": "code",
                    },
                  ],
                  "text": "COMMENTS",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ADFEXP-38 ordered list should not contain code-block marks with others. 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
        "order": 1,
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "marks": [
                    {
                      "type": "strong",
                    },
                  ],
                  "text": "UNE FOIS QUE LE SERVICE ",
                  "type": "text",
                },
                {
                  "marks": [
                    {
                      "type": "code",
                    },
                  ],
                  "text": "COMMENTS",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-1402 tests text between every * and after every * surrounded by non-breaking space 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " .",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-1402 tests text between every + and after every + surrounded by non-breaking space 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "underline",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " .",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-1402 tests text between every ?? and after every ?? surrounded by non-breaking space 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "— symbol",
          "type": "text",
        },
        {
          "text": " .",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-1402 tests text between every ^ and after every ^ surrounded by non-breaking space 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sup",
              },
              "type": "subsup",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " .",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-1402 tests text between every _ and after every _ surrounded by non-breaking space 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " .",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-1402 tests text between every {{ and after every }} surrounded by non-breaking space 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "code",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " .",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-1402 tests text between every ~ and after every ~ surrounded by non-breaking space 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sub",
              },
              "type": "subsup",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " .",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-1402 tests text between every - and after every - surrounded by non-breaking space 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strike",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " .",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between * and * surrounded by curly braces 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " surrounded by curly braces.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between * and * where curly braces is only at end 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the closing symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between * and * where curly braces is only at starting 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the starting symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between + and + surrounded by curly braces 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "underline",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " surrounded by curly braces.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between + and + where curly braces is only at end 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "underline",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the closing symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between + and + where curly braces is only at starting 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "underline",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the starting symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between ?? and ?? surrounded by curly braces 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "— symbol",
          "type": "text",
        },
        {
          "text": " surrounded by curly braces.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between ?? and ?? where curly braces is only at end 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "— symbol",
          "type": "text",
        },
        {
          "text": " where only the closing symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between ?? and ?? where curly braces is only at starting 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "— symbol",
          "type": "text",
        },
        {
          "text": " where only the starting symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between ^ and ^ surrounded by curly braces 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sup",
              },
              "type": "subsup",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " surrounded by curly braces.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between ^ and ^ where curly braces is only at end 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sup",
              },
              "type": "subsup",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the closing symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between ^ and ^ where curly braces is only at starting 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sup",
              },
              "type": "subsup",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the starting symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between _ and _ surrounded by curly braces 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " surrounded by curly braces.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between _ and _ where curly braces is only at end 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the closing symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between _ and _ where curly braces is only at starting 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the starting symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between {{ and }} surrounded by curly braces 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "code",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " surrounded by curly braces.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between {{ and }} where curly braces is only at end 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "code",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the closing symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between {{ and }} where curly braces is only at starting 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "code",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the starting symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between ~ and ~ surrounded by curly braces 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sub",
              },
              "type": "subsup",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " surrounded by curly braces.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between ~ and ~ where curly braces is only at end 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sub",
              },
              "type": "subsup",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the closing symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between ~ and ~ where curly braces is only at starting 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sub",
              },
              "type": "subsup",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the starting symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between - and - surrounded by curly braces 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strike",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " surrounded by curly braces.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between - and - where curly braces is only at end 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strike",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the closing symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2375 tests text between - and - where curly braces is only at starting 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This string tests the ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strike",
            },
          ],
          "text": "symbol",
          "type": "text",
        },
        {
          "text": " where only the starting symbol is surrounded by the curly braces",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2439 should not let auto-links end with parenthesis 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "text prefix ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "https://example.com/abc",
              },
              "type": "link",
            },
          ],
          "text": "https://example.com/abc",
          "type": "text",
        },
        {
          "text": ") text suffix",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2439 should not let auto-links end with parenthesis in url hash segment 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "text prefix ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "https://example.com/abc#abc",
              },
              "type": "link",
            },
          ],
          "text": "https://example.com/abc#abc",
          "type": "text",
        },
        {
          "text": ") text suffix",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects ESS-2439 should remove the last closing parenthesis from the link 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "text prefix ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "https://example.com/(",
              },
              "type": "link",
            },
          ],
          "text": "https://example.com/(",
          "type": "text",
        },
        {
          "text": ")) text suffix",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should NOT auto-linkify monospace formatted text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "type": "code",
            },
          ],
          "text": "text prefix https://example.com/~abc/def/^xyz!bang$.#!.bang text suffix",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should auto-link ftp urls 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "text prefix ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "ftp://example.com/~abc/",
              },
              "type": "link",
            },
          ],
          "text": "ftp://example.com/~abc/",
          "type": "text",
        },
        {
          "text": " text suffix",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should auto-linkify text links with tilde character in it 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "text prefix ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "https://example.com/~abc/def/%5Exyz!bang$.#!.bang",
              },
              "type": "link",
            },
          ],
          "text": "https://example.com/~abc/def/^xyz!bang$.#!.bang",
          "type": "text",
        },
        {
          "text": " text suffix",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should convert double baskslash to a hardBreak node 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a text with a",
          "type": "text",
        },
        {
          "attrs": {
            "localId": null,
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "text": "new line in it",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should default unknown color to black #000000 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a unknown ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "color": "#000000",
              },
              "type": "textColor",
            },
          ],
          "text": "color",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should differentiate raw comma from url-encoded comma 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "text ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "https://example.com/test%2C,%20space",
              },
              "type": "link",
            },
          ],
          "text": "https://example.com/test%2C,%20space",
          "type": "text",
        },
        {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should differentiate raw comma from url-encoded comma in a mailto: 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "text ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "mailto:test%2C,%20space@example.com",
              },
              "type": "link",
            },
          ],
          "text": "test%2C,%20space@example.com",
          "type": "text",
        },
        {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should divide marks intervals into combination of marks 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a *string with a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "color": "#ff0000",
              },
              "type": "textColor",
            },
          ],
          "text": "bold red* text",
          "type": "text",
        },
        {
          "text": ".",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should find monospace text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a string with ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "code",
            },
          ],
          "text": "monospaced text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should find strong marks in the text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a string with a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "strong",
          "type": "text",
        },
        {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should not apply marks on separate lines 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a line with an *asterisk",
          "type": "text",
        },
        {
          "attrs": {
            "localId": null,
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "text": "another one is here and it should* not be applied",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should not apply strong when ending line is two strong symbols 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "*not valid strong **",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should not double url-encode text links 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "text ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "http://example.com/query=some%20text%20with%20encoded%20space",
              },
              "type": "link",
            },
          ],
          "text": "http://example.com/query=some%20text%20with%20encoded%20space",
          "type": "text",
        },
        {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should not double url-encode text links with a url-encoded comma 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "text ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "https://example.com/test%2C%20space",
              },
              "type": "link",
            },
          ],
          "text": "https://example.com/test%2C%20space",
          "type": "text",
        },
        {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should not double url-encode text links with raw comma 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "text ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "https://example.com/test,%20space",
              },
              "type": "link",
            },
          ],
          "text": "https://example.com/test,%20space",
          "type": "text",
        },
        {
          "text": " text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should not fail while applying marks to a string containing double backslash 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a text ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "with a",
          "type": "text",
        },
        {
          "attrs": {
            "localId": null,
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "new",
          "type": "text",
        },
        {
          "text": " line in it",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should not let auto-links end with a bang 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "text prefix ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "https://example.com/",
              },
              "type": "link",
            },
          ],
          "text": "https://example.com",
          "type": "text",
        },
        {
          "text": "! text suffix",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should not let auto-links end with a period 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "text prefix ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "https://example.com/",
              },
              "type": "link",
            },
          ],
          "text": "https://example.com",
          "type": "text",
        },
        {
          "text": ". text suffix",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should not replace marks in the middle of the word 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "https://app.datadoghq.com/screen/220506/product-fabric-content-service?tv_mode=true",
              },
              "type": "link",
            },
          ],
          "text": "https://app.datadoghq.com/screen/220506/product-fabric-content-service?tv_mode=true",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "__confluenceMetadata": null,
                "href": "https://app.datadoghq.com/screen/282018/product-fabric-adf-service?tv_mode=true#close",
              },
              "type": "link",
            },
          ],
          "text": "https://app.datadoghq.com/screen/282018/product-fabric-adf-service?tv_mode=true#close",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should not search for monospace text inside code macro 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a string with ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "language": "java",
        "localId": null,
        "uniqueId": null,
      },
      "content": [
        {
          "text": "mono {{space}} text",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should process citation 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "— citation",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should process deleted 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strike",
            },
          ],
          "text": "deleted",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should process emphasis 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "em",
            },
          ],
          "text": "emphasis",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should process inserted 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "underline",
            },
          ],
          "text": "inserted",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should process string with a wrong order of effects 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "strong ^string",
          "type": "text",
        },
        {
          "text": " with a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sub",
              },
              "type": "subsup",
            },
          ],
          "text": "^ bla*",
          "type": "text",
        },
        {
          "text": "~",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should process subscript 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sub",
              },
              "type": "subsup",
            },
          ],
          "text": "subscript",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should process superscript 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "type": "sup",
              },
              "type": "subsup",
            },
          ],
          "text": "superscript",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Text effects should use code mark first if it's the inner mark 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "This is a ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "bold ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "code",
            },
          ],
          "text": "monospace",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": " thingy",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
